--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "next": "10.2.0",
+    "raw-loader": "^4.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^6.0.1",
+    "react-syntax-highlighter": "^15.4.3"
   }
 }
