write a half baked post

--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,2 @@
-title: "Next.js blog"
-description: "This blog is powered by Next.js"
+title: "HsuBox.Design"
+description: "A Personal Blog for Mike Hsu.  My musings on game programming, etc."
