--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-dom": "17.0.2",
     "react-markdown": "^6.0.1",
     "react-syntax-highlighter": "^15.4.3"
+  },
+  "devDependencies": {
+    "remark-gfm": "^1.0.0"
   }
 }
